// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SplitButtonGroup/> both buttons enabled 1`] = `
<div
  className="btn-group split-btn-group"
>
  <button
    className="btn btn-success"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    click me
  </button>
  <div
    className="dropdown btn-group btn-group-success"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-success"
      disabled={false}
      id="split-btn-group-dropdown-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="split-btn-group-dropdown-btn"
      className="dropdown-menu"
      role="menu"
    />
  </div>
</div>
`;

exports[`<SplitButtonGroup/> main button disabled, dropdown enabled 1`] = `
<div
  className="btn-group split-btn-group"
>
  <button
    className="btn btn-success"
    disabled={true}
    onClick={[MockFunction]}
    type="button"
  >
    click me
  </button>
  <div
    className="dropdown btn-group btn-group-success"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-success"
      disabled={false}
      id="split-btn-group-dropdown-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="split-btn-group-dropdown-btn"
      className="dropdown-menu"
      role="menu"
    />
  </div>
</div>
`;

exports[`<SplitButtonGroup/> main button enabled, dropdown disabled 1`] = `
<div
  className="btn-group split-btn-group"
>
  <button
    className="btn btn-success"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    click me
  </button>
  <div
    className="dropdown disabled btn-group btn-group-success"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-success"
      disabled={true}
      id="split-btn-group-dropdown-btn"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="split-btn-group-dropdown-btn"
      className="dropdown-menu"
      role="menu"
    />
  </div>
</div>
`;
